--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "@apollo/client": "^3.8.6",
+    "apollo-server-express": "^3.12.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2"
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
